src/ui/pages/GenerateSeedPhrase/GenerateSeedPhrase.scss
.generate-seedphrase {
  .paragraph {
    margin: 0;
  }

  ion-segment {
    --background: var(--color-dark-grey);

    ion-segment-button.segment-button-checked {
      &::part(indicator-background) {
        background: var(--color-accent-gradient);
      }
    }
  }

  ion-card {
    position: relative;
    border: 1px solid var(--color-dark-grey);
    --background: var(--color-light-grey);
  }

  .overlay {
    &.visible {
      display: flex;
      flex-direction: column;
      justify-content: center;
      position: absolute;
      top: 0;
      z-index: 2;
      height: 100%;
      text-align: center;
      background: rgba(var(--ion-color-primary-rgb), 0.65);
    }

    &.hidden {
      display: none;
    }

    > * {
      padding: 0.3rem 2.2rem;
    }

    ion-button {
      color: var(--ion-color-light);
      --border-color: var(--ion-color-light);
      margin: 0 auto;
    }
  }

  .seed-phrase-container {
    padding: 0.5rem;

    &.seed-phrase-visible {
      filter: none;
    }

    &.seed-phrase-blurred {
      filter: blur(5px);
    }
  }

  ion-card,
  ion-card p,
  ion-icon {
    color: var(--ion-color-light);
    margin: 0;
  }

  ion-chip {
    border-radius: 8px;
    font-weight: 400;

    .index {
      margin-right: 4px;
    }
  }

  ion-item::part(native) {
    padding: 0;
  }

  ion-label {
    font-size: 1rem !important;
    margin: 0 !important;
  }

  ion-checkbox {
    --size: 32px;
    --background-checked: transparent;
    --checkmark-color: var(--ion-color-primary);
    --border-radius: 4px;
  }

  .footer ion-button {
    margin: 0.5rem 0;
  }
}

